--- a/src/app/components/form-date/form-date.component.scss
+++ b/src/app/components/form-date/form-date.component.scss
@@ -6,12 +6,13 @@
 .form-date-label {
   font-size: 14px;
   font-weight: 500;
-  color: #a903fc;
+  color: #A903fC;
   display: flex;
   margin-bottom: 6px;
 }
 
 .form-input {
+  width: 100%;
   height: 44px;
   padding: 0 12px;
   border-radius: 8px;
@@ -20,6 +21,6 @@
   transition: border-color 0.2s ease;
   &:focus {
     outline: none;
-    border-color: #a903fc;
+    border-color: #A903FC;
   }
 }
