--- a/src/app/components/form-file/form-file.component.scss
+++ b/src/app/components/form-file/form-file.component.scss
@@ -3,7 +3,8 @@
 }
 
 .dropzone {
-  border: 2px dashed #cfcfcf;
+  width: 100%;
+  border: 2px dashed #CFCFCF;
   border-radius: 8px;
   padding: 0.75rem;
   cursor: pointer;
@@ -18,12 +19,12 @@
 }
 
 .placeholder {
-  color: #666;
+  color: #999999;
 }
 
 .hint {
   font-size: 0.85rem;
-  color: #999;
+  color: #999999;
 }
 
 .preview {
