--- a/src/app/components/form-input/form-input.component.scss
+++ b/src/app/components/form-input/form-input.component.scss
@@ -8,12 +8,13 @@
 .form-label {
   font-size: 14px;
   font-weight: 500;
-  color: #a903fc;
+  color: #A903fC;
   display: flex;
   margin-bottom: 6px;
 }
 
 .form-input {
+  width: 100%;
   height: 44px;
   padding: 0 12px;
   border-radius: 8px;
@@ -22,11 +23,11 @@
   transition: border-color 0.2s ease;
   &:focus {
     outline: none;
-    border-color: #a903fc;
+    border-color: #A903FC;
   }
 }
 
 .error {
   font-size: 12px;
-  color: #d32f2f;
+  color: #D32F2F;
 }
