--- a/src/app/components/form-textarea/form-textarea.component.scss
+++ b/src/app/components/form-textarea/form-textarea.component.scss
@@ -11,31 +11,32 @@
 }
 
 .form-textarea {
+  width: 100%;
   padding: 10px 12px;
   font-size: 16px;
   border-radius: 6px;
-  border: 1px solid #ccc;
+  border: 1px solid #CCCCCC;
   outline: none;
   resize: vertical;
   min-height: 100px; 
   &:focus {
-    border-color: #a903fc;
+    border-color: #A903FC;
   }
 
   &.warning {
-    color: orange;
+    color: #FFA500;
   }
 }
 
 .counter {
   align-self: flex-end;
   font-size: 12px;
-  color: #666;
+  color: #495057;
   margin-top: 4px;
 }
 
 .error {
-  color: #d32f2f;
+  color: #D32F2F;
   font-size: 13px;
   margin-top: 4px;
 }
