--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #a903fc;
+  color: #A903FC;
 }
 
 .start-button {
@@ -14,13 +14,20 @@
   align-items: center;
   width: 200px;
   height: 50px;
-  background-color: #a903fc;
+  background-color: #A903FC;
   outline: none;
   border: none;
   border-radius: 8px;
-  color: #ffffff;
+  color: #FFFFFF;
   font-weight: 500;
   :hover {
     cursor: pointer;
   }
+}
+
+.registration-main-container > :not(.start-button) {
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 720px;
+  padding: 0 16px;
 }
