--- a/src/app/components/form-file/form-file.component.html
+++ b/src/app/components/form-file/form-file.component.html
@@ -2,12 +2,19 @@
   <label class="form-label">{{ label }}</label>
 
   <div class="dropzone" (dragover)="onDragOver($event)" (drop)="onDrop($event)">
-    <input type="file" accept="image/*" hidden #fileInput (change)="onFileInput($any($event.target).files)" />
+    <input
+      type="file"
+      accept="image/*"
+      hidden
+      #fileInput
+      (change)="onFileInput($any($event.target).files)"
+    />
 
     <div class="drop-inner" (click)="fileInput.click()">
       <ng-container *ngIf="value; else empty">
         <img [src]="value" class="preview" alt="avatar preview" />
         <div class="change">Change photo</div>
+        <button class="remove" (click)="removePhoto($event)">Remove</button>
       </ng-container>
 
       <ng-template #empty>
