--- a/src/app/components/form-multiselect/form-multiselect.component.html
+++ b/src/app/components/form-multiselect/form-multiselect.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<section class="form-group">
   <label *ngIf="label" class="form-label">{{ label }}</label>
   <div class="multiselect-container">
     <div class="selected-chips">
@@ -32,4 +32,4 @@
   </div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
   <div *ngIf="loading" class="loading-spinner">Loading...</div>
-</div>
+</section>
