--- a/src/app/components/form-slider/form-slider.component.html
+++ b/src/app/components/form-slider/form-slider.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<section class="form-group">
   <label *ngIf="label" class="form-label">{{ label }}</label>
   <div class="slider-container">
     <div class="slider-value">
@@ -20,4 +20,4 @@
     </div>
   </div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
-</div>
+</section>
