--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,6 +1,3 @@
-$mobile-max: 768px;
-$tablet-max: 1024px;
-
 .navbar {
   padding: 16px 20px;
   background-color: #A903FC;
@@ -33,7 +30,7 @@ $tablet-max: 1024px;
   color: #FFFFFF;
 }
 
-@media (max-width: $tablet-max) {
+@media (max-width: 1024px) {
   .navbar {
     padding: 16px 16px;
   }
@@ -48,7 +45,7 @@ $tablet-max: 1024px;
   }
 }
 
-@media (max-width: $mobile-max) {
+@media (max-width: 768px) {
   .navbar {
     padding: 8px 12px;
   }
