--- a/src/app/registration/pages/personal-info/personal-info.scss
+++ b/src/app/registration/pages/personal-info/personal-info.scss
@@ -30,3 +30,9 @@
   opacity: 0.6;
   pointer-events: none;
 }
+
+.phone-hint {
+  font-size: 0.875rem;
+  color: #6C757D;
+  margin-top: 0.25rem;
+}
